# klore

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  install.sh  klore-prd.md  pyproject.toml  setup.sh
.cursor/rules/: klore.mdc
.github/: copilot-instructions.md
.github/workflows/: tests.yml
.windsurf/rules/: klore.md
klore/: __init__.py  asker.py  cli.py  compile_support.py  compile_types.py  compiler.py  git.py  linter.py  llm.py  models.py  state.py  text.py
klore/plugin/: manifest.json
klore/plugin/.claude-plugin/: marketplace.json
klore/plugin/commands/: wiki-ask.sh  wiki-compile.sh  wiki-ingest.sh  wiki-init.sh  wiki-lint.sh  wiki-status.sh  wiki-watch.sh
klore/plugin/plugins/klore/.claude-plugin/: plugin.json
klore/plugin/plugins/klore/commands/: _check-klore.sh  wiki-ask.md  wiki-compile.md  wiki-ingest.md  wiki-init.md  wiki-lint.md  wiki-longform.md  wiki-status.md  wiki-watch.md
klore/plugin/plugins/klore/hooks/: hooks.json  session-start.sh
klore/prompts/: agents_template.md  compile_concept.md  compile_entity.md  compile_source.md
tests/: test_cli.py  test_compiler_extras.py  test_ingester.py  test_integration.py  test_linter.py  test_log.py  test_models.py  test_state.py
